ADD contact details

--- a/index.html
+++ b/index.html
@@ -626,9 +626,9 @@
                             </div>
 
                             <div class="contacts__right">
-                                <p>If you want to get started with your project, please use this e-mail.<a href="mailto:" target="_blank">E-mail</a></p>
+                                <p>If you want to get started with your project, please use this e-mail.<a href="mailto:contact@fairydust.agency" target="_blank">E-mail</a></p>
                                 <p>To talk about your idea in the group, the best place is our LinkedIn group.
-                                <a href="https://www.linkedin.com/groups?mostRecent=&gid=3889758&trk=my_groups-tile-flipgrp" target="_blank">Discuss</a>
+                                <a href="https://disqus.com/by/fairydustagency/" target="_blank">Discuss</a>
                                 </p>
                             </div>
                         </div>
