ADD project references open in new window

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 <span>
                     <span>
                         <span>
-                          <a href="http://reinventingengagement.com/">Reinventing Engagement</a>
+                          <a href="http://reinventingengagement.com/" target="_blank">Reinventing Engagement</a>
                         </span>
                     </span>
                 </span>
@@ -495,7 +495,7 @@
                 <span>
                     <span>
                         <span>
-                          <a href="http://sosed.biz/delim">Sosed</a>
+                          <a href="http://sosed.biz/delim" target="_blank">Sosed</a>
                         </span>
                     </span>
                 </span>
@@ -507,7 +507,7 @@
                 <span>
                     <span>
                         <span>
-                          <a href="http://www.codingamigos.com">Coding Amigos</a>
+                          <a href="http://www.codingamigos.com" target="_blank">Coding Amigos</a>
                         </span>
                     </span>
                 </span>
@@ -519,7 +519,7 @@
                 <span>
                     <span>
                         <span>
-                          <a href="http://www.digitalsolopreneur.eu">digitalsolopreneur</a>
+                          <a href="http://www.digitalsolopreneur.eu" target="_blank">digitalsolopreneur</a>
                         </span>
                     </span>
                 </span>
