FIX digital solopreneur line break

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 <span>
                     <span>
                         <span>
-                          <a href="http://www.digitalsolopreneur.eu" target="_blank">digitalsolopreneur</a>
+                          <a href="http://www.digitalsolopreneur.eu" target="_blank">digital<br>solopreneur</a>
                         </span>
                     </span>
                 </span>
