--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       y : canvas.height / 100
     }, 110, 110);
 
-    document.querySelector('#logoCanvas').addEventListener('mousedown', mouseDownHandler, false);
+    document.querySelector('#logoCanvas').addEventListener('click', mouseDownHandler, false);
     setTimeout(function (){
       document.querySelector('#logoCanvas').click();
     }, 500);
