UPDATE about - remove '...' in text

--- a/index.html
+++ b/index.html
@@ -428,7 +428,6 @@
             <h1 class="section-heading">About</h1>
             <h3 class="section-subheading text-muted">
               We see how governments and nonprofits are struggling because there is a lack of tech professionals who have the knowledge and understand their problems
-              ...
             </h3>
             <div style="height:150px"></div>
           </div>
@@ -448,7 +447,7 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      ... first we personally went out to engage in current movements for social change...
+                      First we personally went out to engage in current movements for social change
                     </h3>
                   </div>
                   <div class="timeline-heading">
@@ -468,7 +467,7 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      ...after that we started to build a strong community of programmers with activistic streak...
+                      After that we started to build a strong community of programmers with activistic streak
                     </h3>
                     <div class="timeline-heading">
                     <p><a href="http://www.codingamigos.com">Codingamigos</a></p>
@@ -488,7 +487,7 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      ...our first projects were a programming school for kids and an e-learning platform to help reduce youth unemployment...
+                      Our first projects were a programming school for kids and an e-learning platform to help reduce youth unemployment
                     </h3>
                     <div class="timeline-heading">
                     <p><a href="http://wizardamigosinstitute.github.io" target="_blank">Wizard Amigos Institute</a>, <a href="http://app.esova.rs" target="_blank">eSova</a></p>
@@ -508,7 +507,7 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      ...as a response to the refugee crisis, we started to develop projects to help newcomers connect with locals through work...
+                      As a response to the refugee crisis, we started to develop projects to help newcomers connect with locals through work
                     </h3>
                     <div class="timeline-heading">
                     <p><a href="http://www.refugeeswork.com" target="_blank">RefugeesWork</a>, <a href="http://github.com/SquatUp" target="_blank">SquatUp</a></p>
@@ -538,9 +537,9 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      ... our vibrant collective of high professionals grew into an distributed agency
+                      Our vibrant collective of high professionals grew into an distributed agency
                       on a mission to help nonprofits & social enterprises solve the urgent crisis
-                      of our time by creating mobile applications for them.
+                      of our time by creating mobile applications for them
                     </h3>
                     <div class="timeline-heading">
                     <p><a href="#">FairyDust</a></p>
