--- a/index.html
+++ b/index.html
@@ -995,6 +995,17 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
 
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
+    ga('create', 'UA-80502790-1', 'auto');
+    ga('send', 'pageview');
+    
+    </script>
+
 </body>
 
 </html>
