--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     <div class="col-md-8 col-md-offset-2" style="padding-bottom: 130px;">
                         <h1 class="brand-heading">fairydust</h1>
                         <p class="intro-text">
-                          We are an international tech community, helping nonprofits and social enterprises leverage the power of digital to amplify the power of people.
+                          We are worker cooperative that provides tech consulting services to progressive nonprofit, social justice, activist and community organizations.
                         </p>
                         <p>
                           <a href="#about" class="btn btn-circle page-scroll">
@@ -447,7 +447,7 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      First we personally went out to engage in current movements for social change
+                      We personally engage in current movements for social change
                     </h3>
                   </div>
                   <div class="timeline-heading">
@@ -467,7 +467,7 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      After that we started to build a strong community of programmers with activistic streak
+                      We built a strong community of programmers with activistic streak
                     </h3>
                     <div class="timeline-heading">
                     <p><a href="http://www.codingamigos.com">Codingamigos</a></p>
@@ -487,10 +487,10 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      Our first projects were a programming school for kids and an e-learning platform to help reduce youth unemployment
+                      We created an e-learning platform to teach programming in JavaScript
                     </h3>
                     <div class="timeline-heading">
-                    <p><a href="http://wizardamigosinstitute.github.io" target="_blank">Wizard Amigos Institute</a>, <a href="http://app.esova.rs" target="_blank">eSova</a></p>
+                    <p><a href="http://app.wizardamigosinstitute.github.io" target="_blank">Wizard Amigos Institute</a></p>
                     </div>
                   </div>
                 </div>
@@ -507,10 +507,10 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      As a response to the refugee crisis, we started to develop projects to help newcomers connect with locals through work
+                      As a response to the refugee crisis, we developed a platform for helping newcomers find remote work
                     </h3>
                     <div class="timeline-heading">
-                    <p><a href="http://www.refugeeswork.com" target="_blank">RefugeesWork</a>, <a href="http://github.com/SquatUp" target="_blank">SquatUp</a></p>
+                    <p><a href="http://www.refugeeswork.com" target="_blank">RefugeesWork</a></p>
                     </div>
                   </div>
                 </div>
@@ -537,9 +537,7 @@
                   </div>
                   <div class="timeline-body">
                     <h3 class="subheading dark">
-                      Our vibrant collective of high professionals grew into an distributed agency
-                      on a mission to help nonprofits & social enterprises solve the urgent crisis
-                      of our time by creating mobile applications for them
+                      We specialize in creating dynamic and affordable mobile, web and desktop applications for a wide variety of organizations.
                     </h3>
                     <div class="timeline-heading">
                     <p><a href="#">FairyDust</a></p>
@@ -582,11 +580,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/treehouse.png" class="img-responsive" alt="">
+              <img src="http://www.refugeeswork.com/images/interior1.jpg" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
               <h4><a href="http://www.refugeeswork.com">RefugeesWork</a></h4>
-              <p class="text-muted">Web platform that helps newcomers connect with local organisations.</p>
+              <p class="text-muted">Online platform for helping newcomers find remote work</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -597,11 +595,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/roundicons.png" class="img-responsive" alt="">
+              <img src="https://scontent.fbkk10-1.fna.fbcdn.net/v/t1.0-9/11039105_1513742412285749_5685782722459588784_n.png?oh=ec30a28fe3097e5691dccb675f7e99cb&oe=58D70391" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4><a href="http://wizardamigosinstitute.github.io">Wizard Amigos Institute</a></h4>
-              <p class="text-muted">Berlin based programming school for kids.</p>
+              <h4><a href="http://app.wizardamigos.com">Wizard Amigos Institute</a></h4>
+              <p class="text-muted">E-learning JavaScript code camps</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
@@ -612,26 +610,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/startup-framework.png" class="img-responsive" alt="">
-            </a>
-            <div class="portfolio-caption">
-              <h4><a href="http://app.esova.rs">eSova</a></h4>
-              <p class="text-muted">e-learning platform with educational videos for teaching programming.</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 portfolio-item">
-            <!-- <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal"> -->
-            <a class="portfolio-link" data-toggle="modal">
-              <div class="portfolio-hover">
-                <div class="portfolio-hover-content">
-                  <i class="fa fa-plus fa-3x"></i>
-                </div>
-              </div>
               <img src="img/portfolio/golden.png" class="img-responsive" alt="">
             </a>
             <div class="portfolio-caption">
-              <h4><a href="http://github.com/SquatUp">SquatUp</a></h4>
-              <p class="text-muted">Open Source Incubator around Self Employment</p>
+              <h4><a href="http://meetup.com/codingamigos">Coding Amigos</a></h4>
+              <p class="text-muted">Run bi-weekly open hacking events in Berlin</p>
             </div>
           </div>
         </div>
