--- a/index.html
+++ b/index.html
@@ -639,9 +639,9 @@
               <div class="modal-body">
                 <!-- Project Details Go Here -->
                 <h2>RefugeesWork</h2>
-                <p class="item-intro text-muted">Is a web platform that help newcomers connect with local organisations.</p>
+                <p class="item-intro text-muted">Online platform that helps newcomers find remote work</p>
                 <img class="img-responsive img-centered" src="img/portfolio/roundicons-free.png" alt="">
-                <p>Locals can help newcomers start their business, offer them volunteering opportunities or hire them as freelance professionals.</p>
+                <p>Anyone can post a project and hire newcomers for remote freelance work.</p>
                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
               </div>
             </div>
@@ -663,10 +663,10 @@
           <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
               <div class="modal-body">
-                <h2>Wizard Amigos Institute</h2>
-                <p class="item-intro text-muted">A Berlin based programming school for kids.</p>
+                <h2>Wizard Amigos</h2>
+                <p class="item-intro text-muted">E-learning JavScript code camps</p>
                 <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
-                <p>iWizard Amigos Institute organises workshops that connect kids from different backgrounds through programming wizardry.</p>
+                <p>We organize code camps to get people started with our e-learning app. Our app to reduce youth unemployment in Serbia, helps refugees in Germany and helps learners in Taiwan, Thailand and other countries learn programming online and for free.</p>
                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
               </div>
             </div>
@@ -689,36 +689,10 @@
             <div class="col-lg-8 col-lg-offset-2">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2>eSova</h2>
-                <p class="item-intro text-muted">An e-learning platform with educational videos for teaching programming.</p>
-                <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
-                <p>We also work on a platform that we built for the city of Sabac in Serbia in order to reduce high youth unemployment. eSova</p>
-                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-content">
-        <div class="close-modal" data-dismiss="modal">
-          <div class="lr">
-            <div class="rl">
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-              <div class="modal-body">
-                <!-- Project Details Go Here -->
-                <h2>SquatUp</h2>
-                <p class="item-intro text-muted">Open Source Incubator around Self Employment</p>
+                <h2>Coding Amigos</h2>
+                <p class="item-intro text-muted">Meetups and a digital collective</p>
                 <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
-                <p>Is an open source incubator for web or mobile projects that build tools and services that transparently help newcomers into self employment.</p>
+                <p>Coding Amigos is a bi-weeky Berlin based meetup and a digital collecitve for developers with activistic streak</p>
                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
               </div>
             </div>
@@ -743,63 +717,6 @@
     - Contribute
     - Connect your project
  -->
-
-
-
-    <!-- supporters section -->
-    <section id="supporters" class="bg-light-gray download-section" style="position: relative;">
-      <div id="map" style="position:absolute; height: 100%; top:0px;"></div>
-      <div class="container" style="width: 80%;">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h1 class="section-heading">Supporters</h1>
-            <br><br><br>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3 col-sm-6 portfolio-item">
-            <a href="http://www.codingamigos.com" target="_blank">
-              <img style="padding-top: 20%;" src="img/supporters/codingamigos.png" class="img-responsive" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6 portfolio-item">
-            <a href="http://co-up.de" target="_blank">
-              <img style="padding-top: 20%;" src="img/supporters/coup.svg" class="img-responsive" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6 portfolio-item">
-            <a href="http://zweidesign.co" target="_blank">
-              <img src="img/supporters/zweidesign.png" class="img-responsive" alt="">
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6 portfolio-item">
-            <a href="http://codefor.de/" target="_blank">
-              <img src="img/supporters/codefor.svg" class="img-responsive" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Donate Section -->
-    <section id="donate" class="content-section text-center">
-        <div>
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h1>Donate</h1>
-                    <p>You can directly support our projects or...</p>
-<!-- https://gratipay.com/
-https://www.donorhut.com/pricing
-http://coverrme.com/howitworks
-http://donate.ly/pricing/
-https://flattr.com/
-https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button -->
-                    <!-- <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Donate Now</a> -->
-                </div>
-            </div>
-        </div>
-        <div style="height:150px;"></div>
-    </section>
 
     <!-- Services Section -->
     <section id="contracting" class="bg-light-gray ">
@@ -844,11 +761,11 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
           </div>
         </div>
         <h4 class=" text-center" style="width:50%; margin: 0 auto;">
-          If your project contributes to solving one of the urgent topics of our time, you can contract us to get professional digital support.
+          Contract us to get professional digital support.
         </h4>
         <br><br><br>
         <h4 class="dark text-center" style="width:50%; margin: 0 auto;">
-          Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!
+          Interested in hiring us? Have questions or comments about anything that you've seen on this site? Give us a call or use e-mail to get in touch. We'll respond as soon as we can!
         </h4>
         <br><br><br>
         <div class="col-lg-4 col-lg-offset-2 text-center">
@@ -874,7 +791,60 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
       <div style="height:100px;"></div>
     </section>
 
+       <!-- Donate Section -->
+    <section id="donate" class="content-section text-center">
+        <div>
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h1>Donate</h1>
+                    <p>We really need your help. Please, support our open source projects.</p>
+<!-- https://gratipay.com/
+https://www.donorhut.com/pricing
+http://coverrme.com/howitworks
+http://donate.ly/pricing/
+https://flattr.com/
+https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button -->
+                    <a href="https://www.patreon.com/user?u=4718617" class="btn btn-default btn-lg">Donate Now</a>
+                </div>
+            </div>
+        </div>
+        <div style="height:150px;"></div>
+    </section>
 
+      <!-- supporters section -->
+    <section id="supporters" class="bg-light-gray download-section" style="position: relative;">
+      <div class="container" style="width: 80%;">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h1 class="section-heading">Supporters</h1>
+            <br><br><br>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3 col-sm-6 portfolio-item">
+            <a href="https://www.mozilla.org/zh-TW/" target="_blank">
+              <img style="padding-top: 20%;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQJ6P5FDyD2yW-DN6sYLpdCePT1KVyHZejMiVK4kUTQSmWU1j8Wg" class="img-responsive" alt="">
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-6 portfolio-item">
+            <a href="http://co-up.de" target="_blank">
+              <img style="padding-top: 20%;" src="img/supporters/coup.svg" class="img-responsive" alt="">
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-6 portfolio-item">
+            <a href="http://g0v.tw/en-US/" target="_blank">
+              <img src="https://pbs.twimg.com/profile_images/378800000836587630/0829b1c8c6b7fabe04b6edd838cfc895_400x400.png" class="img-responsive" alt="">
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-6 portfolio-item">
+            <a href="http://codefor.de/" target="_blank">
+              <img src="img/supporters/codefor.svg" class="img-responsive" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    
     <!-- Impressum Section -->
     <section id="impressum">
       <div class="container">
@@ -891,7 +861,7 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
               <img src="img/team/alex.jpg" class="img-responsive" alt="">
               <h4>Alexander Praetorius</h4>
               <p class="text-muted">
-                Investor & Managing Director
+                Developer and Worker owner
               </p>
               <ul class="list-inline social-buttons">
                 <li><a href="http://twitter.de/serapath"><i class="fa fa-twitter"></i></a>
@@ -917,7 +887,7 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
               <img src="img/team/nina.jpg" class="img-responsive" alt="">
               <h4>Nina Breznik</h4>
               <p class="text-muted">
-                Investor & Managing Director
+                Developer and Worker owner
               </p>
               <ul class="list-inline social-buttons">
                 <li><a href="https://twitter.com/ninabreznik"><i class="fa fa-twitter"></i></a>
