--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                  <img class="img-circle img-responsive" src="img/supporters/codingamigos.png" alt="">
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -823,7 +823,7 @@ https://www.paypal.com/webapps/mpp/get-started/create-recurring-donation-button 
         <div class="row">
           <div class="col-md-3 col-sm-6 portfolio-item">
             <a href="https://www.mozilla.org/zh-TW/" target="_blank">
-              <img style="padding-top: 20%;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQJ6P5FDyD2yW-DN6sYLpdCePT1KVyHZejMiVK4kUTQSmWU1j8Wg" class="img-responsive" alt="">
+              <img style="padding-top: 20%;" src="https://mdn.mozillademos.org/files/8971/firefox_logo.png" class="img-responsive" alt="">
             </a>
           </div>
           <div class="col-md-3 col-sm-6 portfolio-item">
